--- a/styles/style.css
+++ b/styles/style.css
@@ -110,10 +110,11 @@ aside img {
 footer {
   display: inline-flex;
   justify-content: center;
+  text-align: center;
   width: 100%;
-  padding: 0 2rem;
 }
 
 footer p {
   font-size: 1rem;
+  padding: 1rem 0;
 }
