--- a/styles/style.css
+++ b/styles/style.css
@@ -16,9 +16,7 @@ p, a {
   font-size: 1.2rem;
 }
 
-i {
-  margin-right: 1.5rem;
-}
+
 
 /* styling the header */
 header {
@@ -91,10 +89,47 @@ aside img {
   height: 10rem;
 }
 
+.skills-icons-container {
+  display: inline-flex;
+}
+
+.icon-container {
+  position: relative;
+  margin-right: 2rem;
+}
+
+/* .hover-text::before {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid gray;
+} */
+
+.hover-text {
+  position: absolute;
+  top: 30px;
+  background-color: gray;
+  font-size: 1rem;
+  opacity: 0;
+  color: #fff;
+  pointer-events: none;
+  white-space: nowrap;
+  padding: 0.3rem 0.5rem;
+}
+
+.icon-container:hover .hover-text {
+  opacity: 1;
+}
+
 /*styling contacts section */
 #contacts {
   padding: 0 4rem;
   margin-top: 1.5rem;
+}
+
+#contacts i {
+  margin-right: 1.5rem;
 }
 
 #contacts a {
