--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -4,7 +4,6 @@
 */
 
 .informations {
-  max-height: 20rem;
   position: relative;
 }
 
@@ -31,6 +30,18 @@
 .text-container p {
   text-align: justify;
   line-height: 1.5;
+}
+
+@media only screen and (max-width: 1300px) {
+  .portrait-container {
+    height: 25rem;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .portrait-container {
+    height: 30rem;
+  }
 }
 
 /*
