--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,11 @@
 
+html {
+  font-size: 16px;
+}
+
+body {
+  background-color: #F7F5F2;
+}
 
 header {
   text-align: center;
@@ -52,11 +59,16 @@ p {
   border: 1px solid #191919;
   font-size: 2rem;
   color: #191919;
-  padding: 1rem 2rem;
+  padding: 1rem;
+  text-align: center;
+  width: 12rem;
+  border-radius: 1rem;
+  transition: background-color 2000ms cubic-bezier(1.0, 0.9, 0.7, 0.1);;
 }
 
 .link-container a:hover {
   color: gray;
+  background-color: #D3ECA7;
 }
 
 .about, .projects {
@@ -69,4 +81,45 @@ p {
 
 .projects {
   right: 30%;
+}
+
+@media only screen and (max-width: 1300px) {
+  .about {
+    left: 20%;
+  }
+
+  .projects {
+    right: 20%;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .box {
+    width: 70%;
+  }
+
+  .about {
+    left: 10%;
+  }
+
+  .projects {
+    right: 10%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .about, .projects {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .projects {
+    top: 20rem;
+  }
 }
