--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -90,11 +90,23 @@
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: gray;
+  background-color: #747474;
   font-size: 1rem;
   color: #fff;
   white-space: nowrap;
   padding: 0.3rem 0.5rem;
+}
+
+.hover-text:before {
+  position: absolute;
+  content: "";
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-style: solid;
+  border-width: 6px;
+  border-color: transparent;
+  border-bottom-color: #747474;
 }
 
 .icon-container:hover .hover-text {
