--- a/styles/reset.css
+++ b/styles/reset.css
@@ -46,3 +46,59 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/*
+  GENERAL
+*/
+
+html {
+	font-size: 16px;
+}
+
+body {
+	margin: 0;
+	color: #191919;
+	background-color: #F7F5F2;
+}
+
+h2 {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 2rem;
+}
+
+h3 {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 1.8rem;
+	margin: 1rem 0;
+}
+
+p, a, li {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.1rem;
+	color: #191919;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:hover,
+a:focus {
+	color: gray;
+}
+
+em {
+	font-style: italic;
+}
+
+@media only screen and (max-width: 550px) {
+	html {
+		font-size: 14px;
+	}
+}
+
+@media only screen and (max-width: 300px) {
+	html {
+		font-size: 12px;
+	}
+}
