--- a/styles/home.css
+++ b/styles/home.css
@@ -19,7 +19,7 @@ header a {
 
 .name-container {
   width: 100%;
-  height: 10rem;
+  height: max-content;
   text-align: center;
 }
 
@@ -28,9 +28,13 @@ header a {
   margin: 0 auto;
 }
 
-p {
-  font-size: 1.5rem;
+h1 {
+  font-size: 2.3rem;
   margin-bottom: 4rem;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .link-container {
