--- a/styles/reset.css
+++ b/styles/reset.css
@@ -61,6 +61,11 @@ body {
 	background-color: #F7F5F2;
 }
 
+h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 2.4rem;
+}
+
 h2 {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 2rem;
