--- a/styles/style.css
+++ b/styles/style.css
@@ -158,3 +158,331 @@ footer {
     margin-right: 0;
   }
 }
+
+/*
+  STYLING THE ABOUT ME PAGE
+  -- about me
+*/
+
+.informations {
+  position: relative;
+}
+
+.text-container, .portrait-container {
+  display: inline-block;
+}
+
+.portrait-container {
+  width: 15%;
+}
+
+.portrait-container img {
+  width: 100%;
+  border-radius: 2%;
+  max-width: 233px;
+}
+
+.text-container {
+  position: absolute;
+  top: 0;
+  margin-left: 5rem;
+  width: calc(100% - 15% - 6rem);
+}
+
+.text-container p {
+  text-align: left;
+  line-height: 1.5;
+}
+
+/*
+  STYLING THE ABOUT ME PAGE
+  -- knowledge
+*/
+
+.knowledge-list-container {
+  width: 100%;
+}
+
+.knowledge-list-container p {
+  margin-bottom: 1.2rem;
+}
+
+.knowledge-list-container ul {
+  list-style-type: square;
+  margin-left: 2rem;
+}
+
+.knowledge-list-container li:not(:last-child) {
+    margin-bottom: 1.2rem;
+}
+
+/*
+  STYLING THE ABOUT ME PAGE
+  -- skills
+*/
+
+.skills p {
+  text-align: justify;
+  line-height: 1.5;
+}
+
+.skills-icons-container {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  padding: 0.5rem 0;
+  flex-flow: row wrap;
+  width: 60%;
+}
+
+.icon-container {
+  position: relative;
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+
+.line-break {
+  width: 100%;
+  display: none;
+}
+
+.hover-text {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #747474;
+  font-size: 1rem;
+  color: #fff;
+  white-space: nowrap;
+  padding: 0.3rem 0.5rem;
+}
+
+.hover-text:before {
+  position: absolute;
+  content: "";
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-style: solid;
+  border-width: 6px;
+  border-color: transparent;
+  border-bottom-color: #747474;
+}
+
+.icon-container:hover .hover-text {
+  display: block;
+}
+
+/*
+  RESPONSIVE PROPERTIES
+*/
+
+@media only screen and (max-width: 1300px) {
+  .portrait-container {
+    height: 25rem;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .skills-icons-container {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .portrait-container {
+    height: 30rem;
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  .portrait-container {
+    display: none;
+  }
+
+  .text-container {
+    display: block;
+    position: relative;
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .line-break {
+    display: block;
+  }
+
+  .skills-icons-container {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .skills-icons-container {
+    width: 100%;
+  }
+}
+
+/*
+  STYLING THE PROJECTS PAGE
+  -- container
+*/
+
+#projects main {
+  margin-bottom: 3rem;
+}
+
+#projects h2 {
+  margin-bottom: 1.5rem;
+}
+
+.project {
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.projects-container {
+  width: 100%;
+}
+
+.cover-container {
+  width: 48%;
+  padding-top: 1rem;
+}
+
+.project-description {
+  width: 48%;
+}
+
+.cover-container img {
+  width: 100%;
+}
+
+/*
+  STYLING THE PROJECTS PAGE
+  -- project title
+*/
+
+.project-title h3, .project-title a {
+  display: inline-block;
+}
+
+.project-title a {
+  font-size: 1rem;
+  margin-left: 0.5rem;
+}
+
+.project-title a:hover, .fa-circle-exclamation {
+  color: gray;
+}
+
+.project-title .project-link-extended, .demo-link {
+  text-decoration: underline;
+}
+
+.project-title .project-link-icon {
+  display: none;
+}
+
+/*
+  STYLING THE PROJECTS PAGE
+  -- project notice and popup
+*/
+
+.notice {
+  margin-bottom: 1.5rem;
+  max-width: 13rem;
+}
+
+.notice p {
+  font-size: 0.9rem;
+}
+
+.note, .popup-container {
+  display: inline-block;
+}
+
+.note-popup {
+  display: none;
+  z-index: 1;
+  background-color: gray;
+  color: #FFF;
+  text-align: left;
+  width: 8.5rem;
+  border-radius: 0.2rem;
+  padding: 0.5rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translateX(105%);
+}
+
+.popup-container {
+  position: relative;
+}
+
+.popup-container:hover .note-popup {
+  display: block;
+}
+
+/*
+  STYLING THE PROJECTS PAGE
+  -- description container
+*/
+
+.description-container p {
+  text-align: justify;
+  line-height: 1.5;
+}
+
+/*
+  RESPONSIVE PROPERTIES
+*/
+
+@media only screen and (max-width: 1300px) {
+  .project-description {
+    margin-left: 0;
+  }
+
+  .project-title .project-link-icon {
+    display: none;
+  }
+
+  .project-title .project-link-extended {
+    display: inline-block;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .cover-container {
+    display: none;
+  }
+
+  .project-description {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .note-popup {
+    right: 0;
+    bottom: 150%;
+    transform: translateX(-2%);  
+  }
+}
+
+@media only screen and (max-width: 410px) {
+  .project-title .project-link-icon {
+    display: inline-block;
+  }
+
+  .project-title .project-link-extended {
+    display: none;
+  }
+}
+
